# NodeDisk

./: .gitignore  CMakeLists.txt  Makefile  NOTICE.md  README.md  ROADMAP.md
apps/control_node/: main.cpp
apps/device_agent/: main.cpp
apps/netdisk_cli/: main.cpp
apps/sync_v1/: main.cpp
apps/system_demo/: main.cpp
configs/: cfg.json  control_node.env.example  device_agent.env.example
docs/: control_node_service_design.md  distributed_architecture_draft.md  distributed_bootstrap_guide.md  nodedisk_3_0_plan.md  phase1_sync_engine.md  repository_release.md  sync_v1.md  system_architecture_draft.md  system_design_v1.md  system_design_v2.md  testing_v1.md  zerotier_phase1_plan.md
include/netdisk/backup/: backup_service.h  file_index_service.h  recovery_service.h
include/netdisk/common/: config_loader.h  status.h
include/netdisk/control_plane/: control_node_server.h  control_plane_service.h  device_agent_service.h  device_manager.h  policy_manager.h  system_runtime.h  task_scheduler.h
include/netdisk/core/: types.h
include/netdisk/metadata/: metadata_store.h
include/netdisk/network/: protocol.h  protocol_codec.h  transport.h
include/netdisk/security/: audit_logger.h  auth_service.h  node_network_service.h
include/netdisk/storage/: fdfs_api.h  integrity_checker.h  replica_manager.h  storage_backend.h
include/netdisk/sync/: chunk_reader.h  chunker.h  diff_engine.h  hash.h  scanner.h  sync_writer.h
include/netdisk/transfer/: shared_library_service.h
scripts/: run_control_node.sh  run_control_node_env.sh  run_device_agent.sh  run_device_agent_env.sh  test_v1.sh
src/backup/: backup_service.cpp  file_index_service.cpp  recovery_service.cpp
src/common/: config_loader.c  make_log.c  md5.c
src/control_plane/: control_node_server.cpp  control_plane_service.cpp  device_agent_service.cpp  device_manager.cpp  policy_manager.cpp  system_runtime.cpp  task_scheduler.cpp
src/metadata/: metadata_store.cpp
src/network/: protocol_codec.cpp  transport.cpp
src/security/: audit_logger.cpp  auth_service.cpp  node_network_service.cpp
src/storage/: fdfs_api.c  integrity_checker.cpp  replica_manager.cpp  storage_backend.cpp
src/sync/: chunk_reader.cpp  chunker.cpp  diff_engine.cpp  hash.cpp  scanner.cpp  sync_writer.cpp
src/transfer/: shared_library_service.cpp
